--- a/templates/junction_detail.html
+++ b/templates/junction_detail.html
@@ -1,21 +1,21 @@
 {% extends 'base.html' %}
 
 {% block links %}
-    <a href="{{ url_for('get_all_rooms', num=junction[2]) }}">Rooms</a>
-    <a href="{{ url_for('get_all_items', num=junction[2]) }}">Items</a>
-    <a href="{{ url_for('get_all_persons', num=junction[2]) }}">Persons</a>
-    <a href="{{ url_for('get_all_objectives', num=junction[2] ) }}">Objectives</a>
-    <a href="{{ url_for('get_all_junctions', num=junction[2]) }}">Junctions</a>
+    <a href="{{ url_for('get_all_rooms', num=junction.world_id) }}">Rooms</a>
+    <a href="{{ url_for('get_all_items', num=junction.world_id) }}">Items</a>
+    <a href="{{ url_for('get_all_persons', num=junction.world_id) }}">Persons</a>
+    <a href="{{ url_for('get_all_objectives', num=junction.world_id ) }}">Objectives</a>
+    <a href="{{ url_for('get_all_junctions', num=junction.world_id) }}">Junctions</a>
 {% endblock %}
 
 {% block content %}
-    <h2>{% block title %} #{{ junction[0] }} {% endblock %}</h2>
+    <h2>{% block title %} #{{ junction.junction_id }} {% endblock %}</h2>
     
     <p>
-        <i>Found in <a href="{{ url_for('get_single_room', num=junction[1])}}">Room ID #{{ junction[1] }}</a></i></br>
-        <i>Targeting <a href="{{ url_for('get_single_room', num=junction[3])}}">Room ID #{{ junction[3] }}</a></i></br>
-        Description: {{ junction[4] }}
+        <i>Found in <a href="{{ url_for('get_single_room', num=junction.room_id)}}">Room ID #{{ junction.room_id }}</a></i></br>
+        <i>Targeting <a href="{{ url_for('get_single_room', num=junction.dest_id)}}">Room ID #{{ junction.dest_id }}</a></i></br>
+        Description: {{ junction.junction_desc }}
     </p>
 
-    <p><a href="{{ url_for('get_all_junctions', num=junction[2]) }}">All Junctions</a></p>
+    <p><a href="{{ url_for('get_all_junctions', num=junction.world_id) }}">All Junctions</a></p>
 {% endblock %}
