--- a/templates/base_init.html
+++ b/templates/base_init.html
@@ -15,10 +15,10 @@
   <div id="pagestart"></div>
 
   <nav>
-    <a href="{{ url_for('get_my_index') }}">Index</a>
-    <a href="{{ url_for('get_all_creators') }}">Creators</a>
-    <a href="{{ url_for('get_new_creator') }}">New Creator</a>
-    <a href="{{ url_for('get_all_worlds') }}">Worlds</a>
+    <a href="{{ url_for('get_index') }}">Index</a>
+    <a href="{{ url_for('get_creators') }}">Creators</a>
+    <a href="{{ url_for('get_newcreator') }}">New Creator</a>
+    <a href="{{ url_for('get_worlds') }}">Worlds</a>
 
     <a href="/wetty/ssh/game?pass=game"><b>Start game</b></a>
   </nav>
@@ -28,8 +28,8 @@
   </main>
 
   <footer>
-    <p>Logged in as {{ request.authorization.get('username') if (request.authorization != None)  }} </p>
-    <p><a href="{{ url_for('get_my_login') }}">Log in</a></p>
+    <p>Logged in as {{ current_user.creator_name if (current_user != None)  }} </p>
+    <p><a href="{{ url_for('get_logout') }}">Log out</a></p>
     <p><a href="#pagestart">Go to top of page</a></p>
   </footer>
 </body>
