--- a/templates/creator_new.html
+++ b/templates/creator_new.html
@@ -4,11 +4,9 @@
     <h2>{% block title %} New Creator {% endblock %}</h2>
 
     <h4>Please enter data:</h4>
-    <form action="{{ url_for('post_new_creator') }}" method="POST">
+    <form action="{{ url_for('post_newcreator') }}" method="POST">
         Name: <input type="text" name="creator" size="20" maxlength="20" minlength="5"><br>
         Password: <input type="password" name="password" size="20" maxlength="20" minlength="5"><br>
         <input type="submit" value="Create">
     </form>
-
-    <a href="{{ url_for('get_my_index') }}">Index</a>
 {% endblock %}
