Used flask markdown module

--- a/templates/objective_detail.html
+++ b/templates/objective_detail.html
@@ -24,12 +24,12 @@
 
     <h4>Master Quest</h4>
     <p>
-        {{ mdquest|safe }}
+        {{ mdquest|markdown }}
     </p>
 
     <h4>Master Solution</h4>
     <p>
-        {{ mdsolution|safe }}
+        {{ mdsolution|markdown }}
     </p>
 
     <h4>Edit Data</h4>
