--- a/templates/creator_new.html
+++ b/templates/creator_new.html
@@ -7,6 +7,7 @@
     <form action="{{ url_for('post_newcreator') }}" method="POST">
         Name: <input type="text" name="creator" size="20" maxlength="20" minlength="5"><br>
         Password: <input type="password" name="password" size="20" maxlength="20" minlength="5"><br>
+        Invitation Code: <input type="text" name="invitation" size="20" maxlength="20"><br>
         <input type="submit" value="Create">
     </form>
 {% endblock %}
