--- a/templates/base_init.html
+++ b/templates/base_init.html
@@ -20,7 +20,7 @@
     <a href="{{ url_for('get_newcreator') }}">New Creator</a>
     <a href="{{ url_for('get_worlds') }}">Worlds</a>
 
-    <a href="/wetty/ssh/game?pass=game"><b>Start game</b></a>
+    <!--<a href="/wetty/ssh/game?pass=game"><b>Start game</b></a>-->
   </nav>
 
   <main>
