--- a/templates/base.html
+++ b/templates/base.html
@@ -18,6 +18,7 @@
     <a href="{{ url_for('get_index') }}"><i>Back</i></a>
     {% block links %} {% endblock %}
 
+    <a href="{{ url_for('get_storage') }}"><b>Storage</b></a>
     <!--<a href="/wetty/ssh/game?pass=game"><b>Start game</b></a>-->
   </nav>
 
