--- a/templates/storage.html
+++ b/templates/storage.html
@@ -16,7 +16,7 @@
         <ul>
         {% for item in contents %}
             <li>
-            <a href="{{ url_for('get_download', filename=item.Key) }}"> {{ item.Key }} </a>
+            <a href="{{ url_for('get_download', creator_name='.', filename=item.Key) }}"> {{ item.Key }} </a>
             </li>
         {% endfor %}
         </ul>
