Implement S3 delete file

--- a/templates/base_editor.html
+++ b/templates/base_editor.html
@@ -20,7 +20,7 @@
     <a href="{{ url_for('get_index') }}"><i>Back</i></a>
     {% block links %} {% endblock %}
 
-    <a href="{{ url_for('get_download') }}"><b>Storage</b></a>
+    <a href="{{ url_for('get_storage') }}"><b>Storage</b></a>
     <!--<a href="/wetty/ssh/game?pass=game"><b>Start game</b></a>-->
   </nav>
 
