New logo and favicon

--- a/templates/index.html
+++ b/templates/index.html
@@ -1,8 +1,12 @@
 {% extends 'base_init.html' %}
 
 {% block content %}
-    <h2>{% block title %} Index {% endblock %}</h2>
-    <h4>Welcome to </h4>
-    
-    <img src="/static/kringle_logo.jpg" alt="Kringle Logo" width="50%" height="50%">
+    <h2>{% block title %} Welcome to {% endblock %}</h2>
+
+    <img src="/static/kringle_logo.png" alt="Kringle Logo" width="50%" height="50%">
+
+    <p>
+        <b>Kringle Web</b> <i>/ˈkrɪŋ.ɡəl web/</i>. An online solution editor inspired by SANS Holiday Hack Challenge &amp; KringleCon.<br>
+        Currently WIP - work in progress 😀
+    </p>
 {% endblock %}
