--- a/templates/base_editor.html
+++ b/templates/base_editor.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="/static/simple-red.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/easymde/dist/easymde.min.css">
     <script src="https://cdn.jsdelivr.net/npm/easymde/dist/easymde.min.js"></script>
+    <link rel="icon" type="image/png" href="/static/kringle_logo_s.png" />
 </head>
 <body>
   <header>
