--- a/templates/base_init.html
+++ b/templates/base_init.html
@@ -5,6 +5,7 @@
     <title>Kringle Web - {% block title %} {% endblock %}</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/static/simple.css">
+    <link rel="icon" type="image/png" href="/static/kringle_logo_s.png" />
 </head>
 <body>
   <header>
