Show version and contact details

--- a/templates/index.html
+++ b/templates/index.html
@@ -6,7 +6,9 @@
     <img src="/static/kringle_logo.png" alt="Kringle Logo" width="50%" height="50%">
 
     <p>
-        <b>Kringle Web</b> <i>/ˈkrɪŋ.ɡəl web/</i>. An online solution editor inspired by SANS Holiday Hack Challenge &amp; KringleCon.<br>
-        Currently WIP - work in progress 😀
+        <b>Kringle Web</b> <i>/ˈkrɪŋ.ɡəl web/</i>. An online solution editor inspired by <a href="https://www.sans.org/mlp/holiday-hack-challenge/">SANS Holiday Hack Challenge &amp; KringleCon</a>.<br>
+        Currently WIP - work in progress. 😀<br>
+        <br>
+        If you want to get in touch with me just visit my <a href="https://github.com/Benjamin-BK-Krueger">GitHub page</a> or my <a href="https://blk8.de">WordPress site</a>. 
     </p>
 {% endblock %}
