--- a/templates/base_init.html
+++ b/templates/base_init.html
@@ -30,8 +30,8 @@
   </main>
 
   <footer>
-    <p>Logged in as {{ current_user.creator_name if (current_user != None)  }} </p>
-    <p><a href="{{ url_for('get_logout') }}">Log out</a></p>
+    <p>Logged in as {{ current_user.creator_name if (current_user != None) }}, <a href="{{ url_for('get_logout') }}">Log out</a></p>
+    <p>Version: 0.9 (WIP)</p>
     <p><a href="#pagestart">Go to top of page</a></p>
   </footer>
 </body>
