--- a/templates/base.html
+++ b/templates/base.html
@@ -20,6 +20,7 @@
     {% block links %} {% endblock %}
 
     <a href="{{ url_for('get_storage') }}"><b>Storage</b></a>
+    <a href="/static/doc/index.html"><b>Documentation</b></a>
     <!--<a href="/wetty/ssh/game?pass=game"><b>Start game</b></a>-->
   </nav>
 
