--- a/templates/creator_new.html
+++ b/templates/creator_new.html
@@ -4,9 +4,12 @@
     <h2>{% block title %} New Creator {% endblock %}</h2>
 
     <h4>Please enter data:</h4>
-    <form action="{{ url_for('post_newcreator') }}" method="POST">
+    <form action="{{ url_for('post_newcreator') }}" method="POST" oninput="result.value=!!password2.value&&(password.value==password2.value)?'Password matching.':'Passwords NOT matching!'">
         Name: <input type="text" name="creator" size="20" maxlength="20" minlength="5"><br>
+        E-Mail: <input type="email" name="mail" size="20" maxlength="100" minlength="5"><br>
         Password: <input type="password" name="password" size="20" maxlength="20" minlength="5"><br>
+        Password Verification: <input type="password" name="password2" size="20" maxlength="20" minlength="5"><br>
+        <output name="result"></output><br>
         Invitation Code: <input type="text" name="invitation" size="20" maxlength="20"><br>
         <input type="submit" value="Create">
     </form>
