--- a/templates/base_editor.html
+++ b/templates/base_editor.html
@@ -21,6 +21,7 @@
     <a href="{{ url_for('get_index') }}"><i>Back</i></a>
     {% block links %} {% endblock %}
 
+    <a href="{{ url_for('get_mycreator') if (current_user.is_authenticated) else url_for('get_newcreator') }}"><b>Account</b></a>
     <a href="{{ url_for('get_storage') }}"><b>Storage</b></a>
     <a href="/static/doc/index.html"><b>Documentation</b></a>
     <!--<a href="/wetty/ssh/game?pass=game"><b>Start game</b></a>-->
@@ -31,7 +32,7 @@
   </main>
 
   <footer>
-    <p>Logged in as {{ current_user.creator_name if (current_user != None) }}, <a href="{{ url_for('get_logout') }}">Log out</a></p>
+    <p>{{ 'Logged in as ' + current_user.creator_name + ', ' if (current_user.is_authenticated) }}<a href="{{ url_for('get_logout') }}">Log out</a></p>
     <p>Version: 0.9 (WIP)</p>
     <p><a href="#pagestart">Go to top of page</a></p>
   </footer>
