--- a/templates/creator_detail.html
+++ b/templates/creator_detail.html
@@ -3,7 +3,11 @@
 {% block content %}
     <h2>{% block title %} {{ creator.creator_name }} (#{{ creator.creator_id }}) {% endblock %}</h2>
 
-    <img src="{{ creator.creator_img if (creator.creator_img!='') else '/static/not_found.jpg' }}" alt="Creator Image" width="33%" height="33%">
+    <p>
+        <img src="{{ creator.creator_img if (creator.creator_img!='') else '/static/not_found.jpg' }}" alt="Creator Image" width="33%" height="33%">
+    </p>
 
-    <p><a href="{{ url_for('get_creators') }}">All Creators</a></p>
+    <p>
+        <a href="{{ url_for('get_creators') }}">All Creators</a>
+    </p>
 {% endblock %}
