--- a/templates/login.html
+++ b/templates/login.html
@@ -3,13 +3,15 @@
 {% block content %}
     <h2>{% block title %} Login {% endblock %}</h2>
     
-    <h4>Enter your login data:</h4>
-    <form action="{{ url_for('post_login') }}" method="POST">
-        Name: <input type="text" name="creator" size="20" maxlength="20" minlength="5"><br>
-        Password: <input type="password" name="password" size="20" maxlength="20" minlength="5"><br>
-        <input type="checkbox" name="remember">Remember me<br>
-        <input type="submit" value="Log in">
-    </form>
-
-    <a href="{{ url_for('get_index') }}">Index</a>
+    <p>
+        <h4>Enter your login data:</h4>
+        <form action="{{ url_for('post_login') }}" method="POST">
+            <table><tbody>
+            <tr><td width="30%">Name:</td> <td width="70%"><input type="text" name="creator" size="20" maxlength="20" minlength="5"></td></tr>
+            <tr><td>Password:</td> <td><input type="password" name="password" size="20" maxlength="20" minlength="5"></td></tr>
+            </tbody></table>
+            <input type="checkbox" name="remember">Remember me<br>
+            <input type="submit" value="Log in">
+        </form>
+    </p>
 {% endblock %}
