--- a/templates/objective_detail.html
+++ b/templates/objective_detail.html
@@ -20,34 +20,40 @@
         Requires: {{ objective.requires }}
     </p>
 
-    <img src="{{ objective.objective_img if (objective.objective_img!='') else '/static/not_found.jpg' }}" alt="Objective Image" width="33%" height="33%">
-
-    <h4>Master Quest</h4>
     <p>
+        <img src="{{ objective.objective_img if (objective.objective_img!='') else '/static/not_found.jpg' }}" alt="Objective Image" width="33%" height="33%">
+    </p>
+
+    <br><hr><br>
+
+    <p>
+        <h4>Master Quest</h4>
         {{ mdquest|safe }}
     </p>
 
-    <h4>Master Solution</h4>
+    <br><hr><br>
+
     <p>
+        <h4>Master Solution</h4>
         {{ mdsolution|safe }}
     </p>
 
-    <h4>Edit Data</h4>
+    <br><hr><br>
+
     <p>
+        <h4>Edit Data</h4>
         <form action="{{ url_for('get_quest', num=objective.objective_id)}}">
             <input type="submit" value="Edit Master Quest" />
         </form>
-    </p>
-    <p>
         <form action="{{ url_for('get_solution', num=objective.objective_id)}}">
             <input type="submit" value="Edit Master Solution" />
         </form>
-    </p>
-    <p>
         <form action="{{ url_for('get_mysolution', num=objective.objective_id)}}">
             <input type="submit" value="Edit My Solution" />
         </form>
     </p>
 
-    <p><a href="{{ url_for('get_objectives', num=objective.world_id) }}">All Objectives</a></p>
+    <p>
+        <a href="{{ url_for('get_objectives', num=objective.world_id) }}">All Objectives</a>
+    </p>
 {% endblock %}
