--- a/templates/world_detail.html
+++ b/templates/world_detail.html
@@ -28,6 +28,12 @@
     </p>
 
     <p>
+        <form action="{{ url_for('get_delworld', num=world.world_id) }}" method="GET">
+            <input type="submit" value="Delete">
+        </form>
+    </p>
+
+    <p>
         <a href="{{ url_for('get_worlds') }}">All Worlds</a>
     </p>
 {% endblock %}
