Public solutions for each creator possible

--- a/templates/junction.html
+++ b/templates/junction.html
@@ -14,7 +14,7 @@
     <p>
         <ul>
             {% for junction in junctions %}
-            <li><a href="{{ url_for('get_junction', num=junction.junction_id)}}">#{{ junction.junction_id }}</a></li>
+            <li><a href="{{ url_for('get_junction', num=junction.junction_id)}}">Junction #{{ junction.junction_id }}</a></li>
             {% endfor %}
         </ul>
     </p>
